# carte

./: .containerignore  .gitignore  Containerfile  Makefile  biome.jsonc  entrypoint.sh  package-lock.json  package.json  pyproject.toml
carte/: __main__.py  app_keys.py  exc.py  routes.py  types.py
carte/games/: __init__.py  base.py  briscola.py  briscolone.py  scopa.py
carte/static/: main.css  main.js  status.css
carte/static/games/: base.css  base.js  briscola.css  briscola.js  briscolone.css  briscolone.js  scopa.css  scopa.js
carte/templates/: base.html  index.html  status.html
src/carte/: __main__.py  app_keys.py  exc.py  routes.py  types.py
src/carte/games/: base.py  briscola.py  scopa.py
src/carte/static/: main.css  main.js  manifest.json
src/carte/static/games/: base.css  base.js  briscola.js  scopa.js
src/carte/templates/: base.html  game.html
tests/: conftest.py  test_briscola.py  test_scopa.py
