[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
strict = true

# Disallow dynamic typing
disallow_any_unimported = true
#disallow_any_expr = true
disallow_any_decorated = true
#disallow_any_explicit = true

warn_unreachable = true


[tool.poe.tasks]
ruff-fix = "ruff check carte tests --fix-only --exit-zero"
black = "black carte tests"
prettier = "npx --no prettier carte/templates --write"
prettier-check = "npx --no prettier carte/templates --check"
biome-fix = "npx --no @biomejs/biome check carte --write"
format = ["ruff-fix", "black", "prettier", "biome-fix"]

mypy = "mypy carte tests"
ruff = "ruff check carte tests"
biome = "npx --no @biomejs/biome ci --error-on-warnings carte"
pytest = "pytest"
all = ["format", "mypy", "ruff", "biome", "pytest"]


[tool.poetry]
name = "carte"
version = "0.1.0"
description = ""
authors = ["Parnassius <Parnassius@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.10.8"
aiohttp-jinja2 = "1.6"
typenv = "0.2.0"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
mypy = "1.11.2"
poethepoet = "0.29.0"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.6.8"

[tool.poetry.scripts]
carte = "carte.__main__:main"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PGH",   # pygrep-hooks
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "T10",   # flake8-debugger
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]
ignore = [
    "A003",  # builtin-attribute-shadowing
]
fixable = [
    "I",     # isort
    "F401",  # unused-import
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false


[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
xfail_strict = true
